--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'multi-project-1'
-include 'fp'
+rootProject.name = 'gradle-sandbox'
+include 'fp'       //if separate modules exist in the project, use include
 include 'core'
 
