--- a/fp/build.gradle
+++ b/fp/build.gradle
@@ -1,11 +1,19 @@
 plugins {
     id 'java'
-    id 'application'
+    id 'application' //adds the run task. also add Application {main-class}
+//    id 'java-library' //adds the api command!
 }
 
 group 'org.example'
 version '1.0-SNAPSHOT'
 java.sourceCompatibility JavaVersion.VERSION_17
+
+// for gradle run task
+// Define the (full path) main class for the application.
+application {
+
+    mainClass = 'org.example.Main'
+}
 
 repositories {
     mavenCentral()
@@ -18,15 +26,15 @@ dependencies {
      */
     implementation project(':core')
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    //  src/test folder related libs
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
 
-}
-
-application {
-    mainClass = "org.example.Main"
+//    src/main folder related libs
+//    implementation ....
 }
 
 test {
+    //for junit5
     useJUnitPlatform()
 }
