--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application' //adds the run task. also add Application {main-class}
 //    id 'java-library' //adds the api command!
+//    id "me.champeau.jmh" version "0.6.7"   //jmh benchmarking plugin
 }
 
 group 'org.example'
@@ -46,6 +47,13 @@ dependencies {
 
 //    src/main folder related libs
 //    implementation ....
+
+    //for src.jmh folder.. package names must be same!
+//    jmh 'org.openjdk.jmh:jmh-core:1.35'
+//    jmh 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
+
+    //that solves the missing /META-INF/BenchmarkList error
+//    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.35'
 }
 
 test {
