rollback of multithreaded parts

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'gradle-sandbox'
+rootProject.name = 'java-stream-sandbox'
 include 'fp'       //if separate modules exist in the project, use include
 include 'core'
 
